ios support, code push integration

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Call It Business</string>
+    <string name="CodePushDeploymentKey">i2kT4q5oMp-8bHeLO0VJSSqkDN-0so8TEGYDV</string>
 </resources>
